--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -28,7 +28,7 @@
   \hline
   \textbf{Conversion de puissance électromécanique} p\pageref{LP_ConversionPuissance} & \textcolor{green}{Etude MCC (résistance, rendement, ...)} & \textcolor{yellow}{\textbf{60\%}} & Finir moteur synchrone\\
   \hline 
-  \textbf{Induction électromagnétique} p\pageref{LP_Induction} & \textcolor{green}{Mesure inductance circuit RL} & \textcolor{red}{\textbf{0\%}} & Leçon Lydia à retravailler\\
+  \textbf{Induction électromagnétique} p\pageref{LP_Induction} & \textcolor{green}{Mesure inductance circuit RL} & \textcolor{green}{\textbf{70\%}} & Définition de L et inductance mutuelle, applications à travailler\\
   \hline
   \textbf{Rétroaction et oscillations} p\pageref{LP_RetroactionOscillation} & \textcolor{red}{Quali : MCC asservi.}, \textcolor{yellow}{Quanti : Pont de Wien} & \textcolor{red}{\textbf{0\%}} & \\
   \hline
@@ -56,7 +56,7 @@
   \hline
   \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{green}{Mesures raies mercure par un réseau} & \textcolor{green}{\textbf{80\%}} & \\
   \hline
-  \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{green}{Emission/absorption rhodamine} \textcolor{green}{Spectre emission lampe à vapeur de mercure + réseau} & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
+  \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{green}{Emission/absorption rhodamine} \textcolor{green}{Spectre emission lampe à vapeur de mercure + réseau} & \textcolor{green}{\textbf{70\%}} & Partie système à deux niveaux : montrer qu'il n'y a pas effet laser \\
   \hline
   \hline
   \textbf{Propriétés macroscopiques des corps ferromagnétiques } p\pageref{LP_Ferromagnetisme} & \textcolor{green}{Cycle hystérésis transfo} & \textcolor{green}{\textbf{90\%}} & Mettre en relief appli ferro durs/doux + démo confinement lignes de champ slides \\
@@ -65,7 +65,7 @@
   \hline
   \textbf{Phénomènes de résonance dans différents domaines de la physique} p\pageref{LP_resonance} & \textcolor{green}{Résonance en tension sur la capacité du circuit RLC + couplage mutuel circuits RLC couplés} & \textcolor{yellow}{\textbf{40\%}} & Plan à détailler  \\
   \hline
-  \textbf{Oscillateurs ; portraits de phase et non-linéarités} p\pageref{LP_PortaitPhase}~& \textcolor{yellow}{Borda sur le pendule + portait de phase} & \textcolor{red}{\textbf{0\%}} & Leçon Basile pour ref  \\
+  \textbf{Oscillateurs ; portraits de phase et non-linéarités} p\pageref{LP_PortaitPhase}~& \textcolor{green}{Borda sur le pendule + portait de phase} & \textcolor{green}{\textbf{80\%}} & Faire des choix \\
   \hline
 \end{tabularx}
 \end{center}
