--- a/LP_PropagationGuidee.tex
+++ b/LP_PropagationGuidee.tex
@@ -87,9 +87,9 @@
   \textbf{Une pulsation de coupure basse fréquence est associée à chaque mode en dessous de laquelle il n'y a pas guidage}. \textbf{On peut donc guider uniquement des ondes dont les longueurs d'ondes sont inférieures à $2a\sim10^{-3}m$} : optique, infrarouge.\\
   Application numérique : pour $\lambda=500nm$ et $a=1mm$, on peut avoir $p=4000$ modes de propagation dans la fibre.\\
 
-  Parler de dispersion intermodale et intramodale ? En parler après si on a le temps.\\
+  Voir Houard p66. Parler de dispersion intermodale et intramodale ? En parler après si on a le temps.\\
 
-  \textcolor{red}{Pour les ondes de plus basses fréuences, on est obligé d'utiliser d'autres systèmes : fil conducteur pour les ondes BF ($<1$MHz), câbles coaxiaux pour les ondes HF ($<1$GHz). Pour les ondes centimétriques, on a besoin de guide d'ondes creux dont on va maintenant détailler la physique plus quantitativement que pour les ondes lumineuses.}
+  \textcolor{red}{Pour les ondes de plus basses fréquences, on est obligé d'utiliser d'autres systèmes : fil conducteur pour les ondes BF ($<1$MHz), câbles coaxiaux pour les ondes HF ($<1$GHz). Pour les ondes centimétriques, on a besoin de guide d'ondes creux dont on va maintenant détailler la physique plus quantitativement que pour les ondes lumineuses.}
   
   \section{Propagation d'une onde centimétrique dans un guide}
    Dans les câbles coaxiaux, il y a une importante atténuation des signaux pour les fréquences supérieures à 1 GHz. On utilise pour ces fréquences d'autres supports. On va s'intéresser dans cette partie à la possibilité qu'une onde électromagnétique puisse se propager dans un guide plan. 
