--- a/main.tex
+++ b/main.tex
@@ -107,9 +107,9 @@
 \newpage
 \input{LP_ConversionPuissance.tex}
 \newpage
-\input{LP_Induction.tex}
+\input{LP_Induction/LP_Induction.tex}
 \newpage
-\input{LP_RetroactionOscillation.tex}
+\input{LP_RetroactionsOscillations/LP_RetroactionOscillation.tex}
 \newpage
 \input{LP_TraitementSignal/LP_TraitementSignal}
 \newpage
@@ -139,7 +139,7 @@
 \newpage 
 \include{LP_PortaitPhase/LP_PortaitPhase.tex}
 \newpage
-\include{LP_CinematiqueRelativiste}
+\include{LP_CinematiqueRelativiste/LP_CinematiqueRelativiste.tex}
 \newpage
 \include{LP_EffetTunnel}
 \newpage
@@ -149,31 +149,31 @@
 \newpage
 \input{Leçon_chimie/LC_Eau.tex}
 \newpage
-%\input{Leçon_chimie/LC_ST2S/LC_ControlequaliteEauAir}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Solubilite.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_DiagrammeBinaire/LC_Diagramme_binaire.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Stereochimie.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Electrolyse_SPCL.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Oxydoreduction_SPCL.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex}
-%\newpage
-%\input{Leçon_chimie/LC_CinetiqueElectrochimique}
-%\newpage
-%\input{Leçon_chimie/LC_DiagrammeEpH.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SyntheseTraitement}
-%\newpage
-%\input{Leçon_chimie/LC_BiomoleculesEnergie.tex}
-%\newpage
-%\input{Leçon_chimie/LC_GestionRisqueLabo.tex}
-%\newpage
-%\input{Leçon_chimie/LC_STI2D/LC_Oxydroreduction.tex}
-%\newpage
-%\input{Leçon_chimie/LC_MPSI/LC_Metaux.tex}
+\input{Leçon_chimie/LC_ST2S/LC_ControlequaliteEauAir}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Solubilite.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_DiagrammeBinaire/LC_Diagramme_binaire.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Stereochimie.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Electrolyse_SPCL.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Oxydoreduction_SPCL.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex}
+\newpage
+\input{Leçon_chimie/LC_CinetiqueElectrochimique}
+\newpage
+\input{Leçon_chimie/LC_DiagrammeEpH.tex}
+\newpage
+\input{Leçon_chimie/LC_SyntheseTraitement}
+\newpage
+\input{Leçon_chimie/LC_BiomoleculesEnergie.tex}
+\newpage
+\input{Leçon_chimie/LC_GestionRisqueLabo.tex}
+\newpage
+\input{Leçon_chimie/LC_STI2D/LC_Oxydroreduction.tex}
+\newpage
+\input{Leçon_chimie/LC_MPSI/LC_Metaux.tex}
 \end{document}
