Updates from Overleaf

--- a/Leçon_chimie/LC_Eau.tex
+++ b/Leçon_chimie/LC_Eau.tex
@@ -23,7 +23,7 @@ BUP n$^0$790 ~ & ~ & ~ & ~ \\
 
 \begin{reportBlock}{Plan détaillé}
 
-\underline{Niveau} : 1èr ST2S \\
+\underline{Niveau} : 1ère ST2S \\
 
 \section*{Introduction pédagogique}
 
