--- a/main.tex
+++ b/main.tex
@@ -86,94 +86,94 @@
 \begin{document}
 \tableofcontents
 \newpage
-%\input{Transition_Physique.tex}
-%\input{LP_avancement.tex}
-%\newpage
-%\input{LP_Gravitation/LP_Gravitation.tex}
-%\newpage
-%\input{LP_LoisConservation/LP_LoideConservation}
-%\newpage
-%\input{LP_Viscosite/LP_Viscosite.tex}
-%\newpage
-%\input{LP_EcoulementsParfaits/LP_EcoulementParfait.tex}
-%\newpage
-%\input{LP_TensionSurface/LPF3_Tension_surface.tex}
-%\newpage
-%\input{LP_PremierPrincipe/LP_PremierPrincipe}
-%\newpage
-%\input{LP_TransitionPhase/LP_TransitionPhase}
-%\newpage
-%\input{LP_PhenomenesTransports/LP_PhenomenesTransport}
-%\newpage
-%\input{LP_ConversionPuissance/LP_ConversionPuissance}
-%\newpage
-%\input{LP_Induction/LP_Induction.tex}
-%\newpage
-%\input{LP_RetroactionsOscillations/LP_RetroactionOscillation.tex}
-%\newpage
-%\input{LP_TraitementSignal/LP_TraitementSignal}
-%\newpage
-%\input{LP_OndesProgressives/LP_OndeProgressive.tex}
-%\newpage
-%\input{LP_OndesAcoustiques/LP_OndeAcoustique.tex}
-%\newpage
-%\input{LP_PropagationGuidee/LP_PropagationGuidee}
-%\newpage
-%\input{LP_Microscopie/LP_Microscospie.tex}
-%\newpage
-%\input{LP_InterferencesDeuxOndes/LP_InterferencesDeuxOndes.tex}
-%\newpage
-%\input{LP_DivisionAmplitude/LPO3_Division_Amplitude.tex}
-%\newpage
-%\input{LP_DiffractionFraunhofer/LP_DiffractionFraunhofer}
-%\newpage 
-%\input{LP_DiffractionPeriodique/LP_DiffractionStructurePeriodique.tex}
-%\newpage 
-%\input{LP_AbsorptionEmission/LP_AbsorptionEmission.tex}
-%\newpage
-%\include{LP_Ferromagnetisme/LP_Ferromagnetisme.tex}
-%\newpage
-%\include{LP_ConductionElec/LP_ConductionElec.tex}
-%\newpage
-%\include{LP_Resonance/LP_Resonance}
-%\newpage 
-%\include{LP_PortaitPhase/LP_PortaitPhase.tex}
-%\newpage
-%\include{LP_CinematiqueRelativiste/LP_CinematiqueRelativiste.tex}
-%\newpage
-%\include{LP_EffetTunnel/LP_EffetTunnel}
-%\newpage
-%\input{Transition_Chimie.tex}
-%\newpage
+\input{Transition_Physique.tex}
+\input{LP_avancement.tex}
+\newpage
+\input{LP_Gravitation/LP_Gravitation.tex}
+\newpage
+\input{LP_LoisConservation/LP_LoideConservation}
+\newpage
+\input{LP_Viscosite/LP_Viscosite.tex}
+\newpage
+\input{LP_EcoulementsParfaits/LP_EcoulementParfait.tex}
+\newpage
+\input{LP_TensionSurface/LPF3_Tension_surface.tex}
+\newpage
+\input{LP_PremierPrincipe/LP_PremierPrincipe}
+\newpage
+\input{LP_TransitionPhase/LP_TransitionPhase}
+\newpage
+\input{LP_PhenomenesTransports/LP_PhenomenesTransport}
+\newpage
+\input{LP_ConversionPuissance/LP_ConversionPuissance}
+\newpage
+\input{LP_Induction/LP_Induction.tex}
+\newpage
+\input{LP_RetroactionsOscillations/LP_RetroactionOscillation.tex}
+\newpage
+\input{LP_TraitementSignal/LP_TraitementSignal}
+\newpage
+\input{LP_OndesProgressives/LP_OndeProgressive.tex}
+\newpage
+\input{LP_OndesAcoustiques/LP_OndeAcoustique.tex}
+\newpage
+\input{LP_PropagationGuidee/LP_PropagationGuidee}
+\newpage
+\input{LP_Microscopie/LP_Microscospie.tex}
+\newpage
+\input{LP_InterferencesDeuxOndes/LP_InterferencesDeuxOndes.tex}
+\newpage
+\input{LP_DivisionAmplitude/LPO3_Division_Amplitude.tex}
+\newpage
+\input{LP_DiffractionFraunhofer/LP_DiffractionFraunhofer}
+\newpage 
+\input{LP_DiffractionPeriodique/LP_DiffractionStructurePeriodique.tex}
+\newpage 
+\input{LP_AbsorptionEmission/LP_AbsorptionEmission.tex}
+\newpage
+\include{LP_Ferromagnetisme/LP_Ferromagnetisme.tex}
+\newpage
+\include{LP_ConductionElec/LP_ConductionElec.tex}
+\newpage
+\include{LP_Resonance/LP_Resonance}
+\newpage 
+\include{LP_PortaitPhase/LP_PortaitPhase.tex}
+\newpage
+\include{LP_CinematiqueRelativiste/LP_CinematiqueRelativiste.tex}
+\newpage
+\include{LP_EffetTunnel/LP_EffetTunnel}
+\newpage
+\input{Transition_Chimie.tex}
+\newpage
 \input{Leçon_chimie/LC_Avancement.tex}
-%\newpage
+\newpage
 \input{Leçon_chimie/LC_Eau.tex}
-%\newpage
-%\input{Leçon_chimie/LC_ST2S/LC_ControlequaliteEauAir}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Solubilite.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_DiagrammeBinaire/LC_Diagramme_binaire.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Stereochimie.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Electrolyse_SPCL.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Oxydoreduction_SPCL.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex}
-%\newpage
-%\input{Leçon_chimie/LC_CinetiqueElectrochimique}
-%\newpage
-%\input{Leçon_chimie/LC_DiagrammeEpH.tex}
-%\newpage
-%\input{Leçon_chimie/LC_SyntheseTraitement}
-%\newpage
-%\input{Leçon_chimie/LC_BiomoleculesEnergie.tex}
-%\newpage
-%\input{Leçon_chimie/LC_GestionRisqueLabo.tex}
-%\newpage
-%\input{Leçon_chimie/LC_STI2D/LC_Oxydroreduction.tex}
-%\newpage
-%\input{Leçon_chimie/LC_MPSI/LC_Metaux.tex}
+\newpage
+\input{Leçon_chimie/LC_ST2S/LC_ControlequaliteEauAir}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Solubilite.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_DiagrammeBinaire/LC_Diagramme_binaire.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Stereochimie.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Electrolyse_SPCL.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Oxydoreduction_SPCL.tex}
+\newpage
+\input{Leçon_chimie/LC_SPCL/LC_Conductimetrie/LC22_Conductimétrie.tex}
+\newpage
+\input{Leçon_chimie/LC_CinetiqueElectrochimique}
+\newpage
+\input{Leçon_chimie/LC_DiagrammeEpH.tex}
+\newpage
+\input{Leçon_chimie/LC_SyntheseTraitement}
+\newpage
+\input{Leçon_chimie/LC_BiomoleculesEnergie.tex}
+\newpage
+\input{Leçon_chimie/LC_GestionRisqueLabo.tex}
+\newpage
+\input{Leçon_chimie/LC_STI2D/LC_Oxydroreduction.tex}
+\newpage
+\input{Leçon_chimie/LC_MPSI/LC_Metaux.tex}
 \end{document}
